[gd_scene load_steps=7 format=3 uid="uid://dfmy15nixg3h3"]

[ext_resource type="Script" uid="uid://q3ja4na5cowa" path="res://scenes/ui/main/MainOs.gd" id="1_8r8lf"]
[ext_resource type="Theme" uid="uid://ddlr8menttf7k" path="res://themes/tema.tres" id="2_n01vk"]
[ext_resource type="PackedScene" uid="uid://du7udotvweuoo" path="res://scenes/ui/panels/dashboard/DashboardPanel.tscn" id="3_ded1p"]
[ext_resource type="PackedScene" uid="uid://cu7ybfgi0bopk" path="res://scenes/ui/panels/messages/MessagesPanel.tscn" id="4_07ygr"]
[ext_resource type="PackedScene" uid="uid://bxthynfs5udhq" path="res://scenes/ui/panels/missions/MissionsPanel.tscn" id="5_yyxjp"]
[ext_resource type="PackedScene" uid="uid://6ysewcuhdy8u" path="res://scenes/ui/panels/inventory/InventoryPanel.tscn" id="6_gesyk"]

[node name="MainOS" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_n01vk")
script = ExtResource("1_8r8lf")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="OsButton" type="Button" parent="ColorRect2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "OS"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Margin" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="ColorRect/Margin"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelTitulo" type="Panel" parent="ColorRect/Margin/VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/Margin/VBox/PanelTitulo"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/Margin/VBox/PanelTitulo/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4

[node name="NombreOS" type="Label" parent="ColorRect/Margin/VBox/PanelTitulo/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "OS"

[node name="BotonCerrar" type="Button" parent="ColorRect/Margin/VBox/PanelTitulo/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "x"

[node name="Panel" type="Panel" parent="ColorRect/Margin/VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="ColorRect/Margin/VBox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="BtnDashboard" type="Button" parent="ColorRect/Margin/VBox/Panel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Dashboard"

[node name="BtnMessages" type="Button" parent="ColorRect/Margin/VBox/Panel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Mensajes"

[node name="BtnMissions" type="Button" parent="ColorRect/Margin/VBox/Panel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Misiones"

[node name="BtnInventory" type="Button" parent="ColorRect/Margin/VBox/Panel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Inventario"

[node name="BtnSkills" type="Button" parent="ColorRect/Margin/VBox/Panel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Habilidades"

[node name="BtnEncyclopedia" type="Button" parent="ColorRect/Margin/VBox/Panel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Enciclop√©dia"

[node name="BtnWorldLog" type="Button" parent="ColorRect/Margin/VBox/Panel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Eventos"

[node name="TabContainer" type="TabContainer" parent="ColorRect/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0
tabs_visible = false

[node name="DashboardTab" type="Control" parent="ColorRect/Margin/VBox/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="DashboardPanel" parent="ColorRect/Margin/VBox/TabContainer/DashboardTab" instance=ExtResource("3_ded1p")]
layout_mode = 1

[node name="MessagesTab" type="Control" parent="ColorRect/Margin/VBox/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MessagesPanel" parent="ColorRect/Margin/VBox/TabContainer/MessagesTab" instance=ExtResource("4_07ygr")]
layout_mode = 1

[node name="MissionsTab" type="Control" parent="ColorRect/Margin/VBox/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MissionsPanel" parent="ColorRect/Margin/VBox/TabContainer/MissionsTab" instance=ExtResource("5_yyxjp")]
layout_mode = 1

[node name="InventoryTab" type="Control" parent="ColorRect/Margin/VBox/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="InventoryPanel" parent="ColorRect/Margin/VBox/TabContainer/InventoryTab" instance=ExtResource("6_gesyk")]
layout_mode = 1

[node name="SkillsTab" type="Control" parent="ColorRect/Margin/VBox/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="EncyclopediaTab" type="Control" parent="ColorRect/Margin/VBox/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="WorldLogTab" type="Control" parent="ColorRect/Margin/VBox/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 6
